// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactDomTemplate should wrap code into a component 1`] = `
"import React from 'react'

const Test = () => <Svg />

export default Test"
`;

exports[`reactDomTemplate should wrap code into a component 2`] = `
"import React from 'react'

const Test = ({ title }) => <Svg />

export default Test"
`;

exports[`reactDomTemplate should wrap code into a component 3`] = `
"import React from 'react'

const Test = ({ svgRef }) => <Svg />

export default Test"
`;

exports[`reactDomTemplate should wrap code into a component 4`] = `
"import React from 'react'

const Test = props => <Svg />

export default Test"
`;

exports[`reactDomTemplate should wrap code into a component 5`] = `
"import React from 'react'

const Test = ({ svgRef, title }) => <Svg />

export default Test"
`;

exports[`reactDomTemplate should wrap code into a component 6`] = `
"import React from 'react'

const Test = ({ title, ...props }) => <Svg />

export default Test"
`;

exports[`reactDomTemplate should wrap code into a component 7`] = `
"import React from 'react'

const Test = ({ svgRef, ...props }) => <Svg />

export default Test"
`;
